maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:24: error: expected class or object definition
	def random3():Int = {
        ^RandomMouseMaze:31: error: Unmatched closing brace '}' ignored here
}
^